ci: ignore test files for clang-tidy

--- a/.github/workflows/clang_tidy.yml
+++ b/.github/workflows/clang_tidy.yml
@@ -27,7 +27,8 @@ jobs:
 
     - name: Run Clang-Tidy
       run: |
-        files=$(find . -name "*.cpp" -o -name "*.h" -o -name "*.hpp" -o -name "*.cc" -o -name "*.cxx" -o -name "*.hxx")
+        files=$(find . \( -name "*.cpp" -o -name "*.h" -o -name "*.hpp" -o -name "*.cc" -o -name "*.cxx" -o -name "*.hxx" \) -not -name "test*.cpp")
+
         echo "Files to analyze: $files"
         echo "Running clang tidy"
         echo "$files" | xargs clang-tidy
@@ -36,4 +37,4 @@ jobs:
       if: failure()
       run: |
         echo -e "To automatically apply suggested fixes, run the following command:
-        find . -name \"*.cpp\" -o -name \"*.h\" -o -name \"*.hpp\" -o -name \"*.cc\" -o -name \"*.cxx\" -o -name \"*.hxx\" | xargs clang-tidy -fix -fix-errors"
+        find . \( -name \"*.cpp\" -o -name \"*.h\" -o -name \"*.hpp\" -o -name \"*.cc\" -o -name \"*.cxx\" -o -name \"*.hxx\" \) -not -name \"test*.cpp\" | xargs clang-tidy -fix -fix-errors"
