bazel: dont apply warning options to third_party/

--- a/.bazelrc
+++ b/.bazelrc
@@ -23,26 +23,26 @@ build --cxxopt=-Wdouble-promotion
 build --cxxopt=-Wformat=2
 build --cxxopt=-Wimplicit-fallthrough
 build --cxxopt=-Werror
-# build --per_file_copt=-external/.*@-Wlifetime # not compatible with gcc
+# build --cxxopt=-Wlifetime # incompatible with gcc
 
-build --per_file_copt=external/.*@-Wno-all
-build --per_file_copt=external/.*@-Wno-extra
-build --per_file_copt=external/.*@-Wno-shadow
-build --per_file_copt=external/.*@-Wno-non-virtual-dtor
-build --per_file_copt=external/.*@-Wno-old-style-cast
-build --per_file_copt=external/.*@-Wno-cast-align
-build --per_file_copt=external/.*@-Wno-unused
-build --per_file_copt=external/.*@-Wno-overloaded-virtual
-build --per_file_copt=external/.*@-Wno-pedantic
-build --per_file_copt=external/.*@-Wno-conversion
-build --per_file_copt=external/.*@-Wno-sign-conversion
-build --per_file_copt=external/.*@-Wno-misleading-indentation
-build --per_file_copt=external/.*@-Wno-duplicated-cond
-build --per_file_copt=external/.*@-Wno-duplicated-branches
-build --per_file_copt=external/.*@-Wno-logical-op
-build --per_file_copt=external/.*@-Wno-null-dereference
-build --per_file_copt=external/.*@-Wno-useless-cast
-build --per_file_copt=external/.*@-Wno-double-promotion
-build --per_file_copt=external/.*@-Wno-implicit-fallthrough
-build --per_file_copt=external/.*@-Wno-error
-# build --per_file_copt=-external/.*@-Wlifetime # not compatible with gcc
+build --per_file_copt=third_party/.*,external/.*@-Wno-all
+build --per_file_copt=third_party/.*,external/.*@-Wno-extra
+build --per_file_copt=third_party/.*,external/.*@-Wno-shadow
+build --per_file_copt=third_party/.*,external/.*@-Wno-non-virtual-dtor
+build --per_file_copt=third_party/.*,external/.*@-Wno-old-style-cast
+build --per_file_copt=third_party/.*,external/.*@-Wno-cast-align
+build --per_file_copt=third_party/.*,external/.*@-Wno-unused
+build --per_file_copt=third_party/.*,external/.*@-Wno-overloaded-virtual
+build --per_file_copt=third_party/.*,external/.*@-Wno-pedantic
+build --per_file_copt=third_party/.*,external/.*@-Wno-conversion
+build --per_file_copt=third_party/.*,external/.*@-Wno-sign-conversion
+build --per_file_copt=third_party/.*,external/.*@-Wno-misleading-indentation
+build --per_file_copt=third_party/.*,external/.*@-Wno-duplicated-cond
+build --per_file_copt=third_party/.*,external/.*@-Wno-duplicated-branches
+build --per_file_copt=third_party/.*,external/.*@-Wno-logical-op
+build --per_file_copt=third_party/.*,external/.*@-Wno-null-dereference
+build --per_file_copt=third_party/.*,external/.*@-Wno-useless-cast
+build --per_file_copt=third_party/.*,external/.*@-Wno-double-promotion
+build --per_file_copt=third_party/.*,external/.*@-Wno-implicit-fallthrough
+build --per_file_copt=third_party/.*,external/.*@-Wno-error
+# build --per_file_copt=third_party/.*,external/.*@-Wno-lifetime # incompatible with gcc
