--- a/.github/workflows/gitlint.yml
+++ b/.github/workflows/gitlint.yml
@@ -1,25 +1,20 @@
+---
 name: GitLint
-
-on:
+on:  # yamllint disable-line rule:truthy
   pull_request:
-    branches:
-      - '*'
-
+    branches: ['*']
 jobs:
   gitlint:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-
       - name: Install gitlint
         run: |
           python -m pip install gitlint
-
       - name: Run gitlint
-        run: |
+        run: |-
           gitlint --commits "${{ github.event.pull_request.base.sha }}..HEAD"
