--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -1,24 +1,18 @@
+---
 name: Lint YAML files
-
-on:
+on:  # yamllint disable-line rule:truthy
   pull_request:
-    paths:
-      - '**/*.yml'
-      - '**/*.yaml'
-
+    paths: ['**/*.yml', '**/*.yaml']
 jobs:
   lint:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
       - name: Install yamllint
         run: |
           python -m pip install --upgrade pip
           pip install yamllint
-
       - name: Lint YAML files
         run: |
           yamllint . || exit 1
