--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -21,7 +21,7 @@ jobs:
           python -m pip install --upgrade pip
           pip install yamllint
       - name: Lint YAML files
-        run: |
+        run: |-
           if echo "${{ steps.changed_files.outputs.all }}" | grep -qE '\.(yml|yaml)$'; then
             echo -e "Running yamllint"
             yamllint . || exit 1
