--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -1,18 +1,30 @@
+# yamllint disable rule:line-length
 ---
 name: Lint YAML files
 on:  # yamllint disable-line rule:truthy
   pull_request:
-    paths: ['**/*.yml', '**/*.yaml']
+    branches: ['*']
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+      - name: Get changed files
+        uses: jitterbit/get-changed-files@v1
+        id: changed_files
+        with:
+          format: space-delimited
+          token: ${{ secrets.GITHUB_TOKEN }}
       - name: Install yamllint
         run: |
           python -m pip install --upgrade pip
           pip install yamllint
       - name: Lint YAML files
         run: |
-          yamllint . || exit 1
+          if echo "${{ steps.changed_files.outputs.all }}" | grep -qE '\.(yml|yaml)$'; then
+            echo -e "Running yamllint"
+            yamllint . || exit 1
+          else
+            echo -e "Skipping yamllint since no YAML files were changed."
+          fi
