ci: update actions names
The names are used to define the rule that blocks merges

--- a/.github/workflows/bazel_buildifier.yml
+++ b/.github/workflows/bazel_buildifier.yml
@@ -5,7 +5,7 @@ on:  # yamllint disable-line rule:truthy
     branches: ['*']
     paths: [BUILD, WORKSPACE, MODULE.bazel, .bazelrc]
 jobs:
-  build:
+  bazel_buildifier:
     runs-on: ubuntu-latest
     steps:
       - name: Cache bazel
