--- a/.github/workflows/bazel_build.yml
+++ b/.github/workflows/bazel_build.yml
@@ -4,7 +4,7 @@ on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
 jobs:
-  build:
+  bazel_build:
     runs-on: ubuntu-latest
     steps:
       - name: Cache bazel
