--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -5,7 +5,7 @@ on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
 jobs:
-  lint:
+  yamllint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
