--- a/.github/workflows/check_pr_description.yml
+++ b/.github/workflows/check_pr_description.yml
@@ -2,8 +2,7 @@
 ---
 name: PR description
 on:  # yamllint disable-line rule:truthy
-  pull_request:
-    types: [opened, edited, synchronize]
+  workflow_call:
 jobs:
   check-description:
     runs-on: ubuntu-latest
