--- a/.github/workflows/gitlint.yml
+++ b/.github/workflows/gitlint.yml
@@ -1,8 +1,7 @@
 ---
 name: GitLint
 on:  # yamllint disable-line rule:truthy
-  pull_request:
-    branches: ['*']
+  workflow_call:
 jobs:
   gitlint:
     runs-on: ubuntu-latest
