--- a/.github/workflows/yamllint.yml
+++ b/.github/workflows/yamllint.yml
@@ -2,8 +2,7 @@
 ---
 name: Lint YAML files
 on:  # yamllint disable-line rule:truthy
-  pull_request:
-    branches: ['*']
+  workflow_call:
 jobs:
   yamllint:
     runs-on: ubuntu-latest
