ci: fix condition in buildifier workflow
The file variable contains the full path so matching with *

--- a/.github/workflows/bazel_buildifier.yml
+++ b/.github/workflows/bazel_buildifier.yml
@@ -32,7 +32,7 @@ jobs:
           IFS=' ' read -r -a files <<< "${{ steps.changed_files.outputs.all }}"
           bazel_files=()
           for file in "${files[@]}"; do
-              if [[ "$file" == BUILD || "$file" == WORKSPACE || "$file" == MODULE\.bazel || "$file" == \.bazelrc ]]; then
+              if [[ "$file" == *BUILD || "$file" == *WORKSPACE || "$file" == *MODULE.bazel || "$file" == *.bazelrc ]]; then
                   bazel_files+=("$file")
               fi
           done
