--- a/examples/cpp/BUILD
+++ b/examples/cpp/BUILD
@@ -7,6 +7,9 @@ cc_library(
 cc_binary(
     name = "bin",
     srcs = ["main.cpp"],
+    copts = [
+        "-Weverything",  # critical
+    ],
     deps = [
         ":lib",
     ],
