--- a/.bazelrc
+++ b/.bazelrc
@@ -1,6 +1,7 @@
 startup --output_user_root=/tmp/bazel_output
 build --verbose_failures
 build --repo_env=CC=clang
+build --action_env=CXX=clang
 build --cxxopt=-std=c++20
 
 # Non-critical (Default)
@@ -21,6 +22,8 @@ build --cxxopt=-Wnull-dereference
 build --cxxopt=-Wformat=2
 build --cxxopt=-Wimplicit-fallthrough
 build --cxxopt=-Werror
+build --copt -fsanitize=address
+build --per_file_copt=third_party/.*,external/.*@-fsanitize=address
 
 # Disable warning option for external libs
 
