--- a/.github/workflows/clang_tidy.yml
+++ b/.github/workflows/clang_tidy.yml
@@ -4,37 +4,60 @@ name: Clang-Tidy
 on:  # yamllint disable-line rule:truthy
   pull_request:
     branches: ['*']
+
 jobs:
   clang-tidy:
     runs-on: ubuntu-latest
+    container:
+      image: dtors/base-cpp:latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
-      - name: Get changed files
-        uses: jitterbit/get-changed-files@v1
-        id: changed_files
-        with:
-          format: space-delimited
-          token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Run Clang-Tidy
-        run: |-
-          IFS=' ' read -r -a files <<< "${{ steps.changed_files.outputs.all }}"
-          cpp_files=()
-          for file in "${files[@]}"; do
-              if [[ "$file" == *.cpp || "$file" == *.h || "$file" == *.hpp || "$file" == *.cc || "$file" == *.cxx || "$file" == *.hxx ]]; then
-                  cpp_files+=("$file")
-              fi
-          done
+        uses: actions/checkout@v4
 
-          if [ ${#cpp_files[@]} -gt 0 ]; then
-            echo -e "Running clang-tidy"
-            bazel build //... \
-            --aspects @bazel_clang_tidy//clang_tidy:clang_tidy.bzl%clang_tidy_aspect \
-            --output_groups=report \
-            --@bazel_clang_tidy//:clang_tidy_config=//:clang_tidy_config
-          else
-            echo -e "Skipping clang-tidy since no source files were changed."
-          fi
+      - name: Configure Git Safe Directory
+        run: |
+          git config --global --add safe.directory $(pwd)
+
+      - name: Find affected files
+        run: |
+          git fetch origin ${{ github.base_ref }} --depth=1
+          git diff --name-only origin/${{ github.base_ref }} > affected_files.txt
+          echo "Affected files:"
+          cat affected_files.txt
+
+      - name: Find affected cpp files
+        run: |
+          > affected_cpp_files.txt
+
+          while read file; do
+            if [[ "$file" == *.cpp || "$file" == *.h || "$file" == *.hpp || "$file" == *.cc || "$file" == *.cxx || "$file" == *.hxx ]]; then
+              echo "$file" >> affected_cpp_files.txt
+            fi
+          done < affected_files.txt
+
+          sort -u affected_cpp_files.txt -o affected_cpp_files.txt
+          echo "Affected cpp files:"
+          cat affected_cpp_files.txt
+          echo "cpp_files=$(cat affected_cpp_files.txt | tr '\n' ' ')" >> $GITHUB_ENV
+        shell: bash
+
+      - name: Generate Compile Commands
+        if: env.cpp_files != ''
+        run: |
+          echo "Generating compile commands"
+          bazelisk run @hedron_compile_commands//:refresh_all
+
+      - name: Run Clang-Tidy
+        if: env.cpp_files != ''
+        run: |
+          echo "Running: clang-tidy ${cpp_files} -p ./compile_commands.json"
+          clang-tidy ${cpp_files} -p ./compile_commands.json
+
+      - name: Skip Clang-Tidy
+        if: env.cpp_files == ''
+        run: echo "No affected cpp files found. Skipping Clang-Tidy."
+
       - name: Show failure message
         if: failure()
         run: |-
