--- a/.github/workflows/arduino_lint.yml
+++ b/.github/workflows/arduino_lint.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Run arduino-lint
         if: env.ino_files != ''
         run: |
-          echo "Running: arduino-lint ./arduino"
-          arduino-lint ./arduino
+          echo "Running: arduino-lint"
+          arduino-lint --recursive ./arduino
 
       - name: Skip arduino-lint
         if: env.ino_files == ''
