--- a/.github/workflows/gitlint.yml
+++ b/.github/workflows/gitlint.yml
@@ -6,15 +6,20 @@ on:  # yamllint disable-line rule:truthy
 jobs:
   gitlint:
     runs-on: ubuntu-latest
+    container:
+      image: dtors/base-cpp:latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
         with:
           ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
-      - name: Install gitlint
+
+      - name: Configure Git Safe Directory
         run: |
-          python -m pip install gitlint
+          git config --global --add safe.directory $(pwd)
+
       - name: Run gitlint
         run: |-
           gitlint --commits "${{ github.event.pull_request.base.sha }}..HEAD"
