tooling: define aarch64 toolchain
Use gcc to cross-compilation for aarch64, as clang requires
additional setup.
Clang support can be added on a follow-up.

--- a/.github/workflows/llvm_cov.yml
+++ b/.github/workflows/llvm_cov.yml
@@ -16,4 +16,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Coverage Script
-        run: bazelisk run //tools/coverage:llvm_cov -- -t //examples/cpp:test -s
+        run: bazelisk run //tools/coverage:llvm_cov --platforms=//bazel/platforms:x86_64_linux -- -t //examples/cpp:test -s
