--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -20,5 +20,6 @@ git_override(
 bazel_dep(name = "platforms", version = "0.0.10")
 
 register_toolchains(
-    "//toolchain:cc_toolchain_for_linux_x86_64",
+    "//toolchain/x86_64_linux",
+    "//toolchain/aarch64_linux",
 )
