--- a/examples/cpp/BUILD
+++ b/examples/cpp/BUILD
@@ -2,17 +2,19 @@ cc_library(
     name = "lib",
     srcs = ["hello.cpp"],
     hdrs = ["hello.hpp"],
-    features = [
-        "warnings_critical_code",
-    ],
+    features = select({
+        "//bazel/platforms:aarch64_config": ["warnings_critical_code_gcc"],
+        "//conditions:default": ["warnings_critical_code_clang"],
+    }),
 )
 
 cc_binary(
     name = "bin",
     srcs = ["main.cpp"],
-    features = [
-        "warnings_critical_code",
-    ],
+    features = select({
+        "//bazel/platforms:aarch64_config": ["warnings_critical_code_gcc"],
+        "//conditions:default": ["warnings_critical_code_clang"],
+    }),
     deps = [
         ":lib",
     ],
