--- a/.github/workflows/bazel_build.yml
+++ b/.github/workflows/bazel_build.yml
@@ -35,7 +35,7 @@ jobs:
           while read file; do
             if [[ "$file" == *.c || "$file" == *.cc || "$file" == *.cpp || "$file" == *.cxx || "$file" == *.h || "$file" == *.hpp || "$file" == *.hxx ]]; then
               echo "Finding targets for: $file"
-              targets=$(bazel query --output=package "$file" || true)/...
+              targets=$(bazelisk query --output=package "$file" || true)/...
               echo "$targets" >> affected_targets.txt
             fi
           done < affected_files.txt
